syntax = "proto3";

service ProductService {
    rpc CreateProduct (Product) returns (Product);
    rpc DeleteProduct (ProductId) returns (Product);
    rpc EditProduct (Product) returns (Product);
    rpc GetAllProducts (ProductId) returns (ProductList);
    rpc GetProduct (ProductId) returns (Product);
}

message ProductId {
    optional string id = 1;
}

message ProductList {
    repeated Product products = 1;
}

message Product {
    optional string id = 1;
    string name = 2;
    string category = 3;
    float price = 4;
    int32 stock = 5;
}
